--- a/index.html
+++ b/index.html
@@ -8,27 +8,27 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>CrowdMe Exam Two</title>
+  <title>Exam Two</title>
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat|Nunito|Open+Sans:300,400,600&display=swap" rel="stylesheet">
   <!-- Font Awesome -->
-  <link href="assets/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+  <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet">
 
   <!-- WOW/Animate CSS --->
-  <link href="assets/vendor/wow/css/animate.css" rel="stylesheet">
+  <link href="vendor/wow/css/animate.css" rel="stylesheet">
 
   <!-- Bootstrap core CSS -->
-  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link href="assets/css/scrolling-nav.css" rel="stylesheet">
+  <link href="css/scrolling-nav.css" rel="stylesheet">
 
   <!-- Theme Css -->
-  <link href="assets/css/style.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
 
   <!-- Responsive/Media Css -->
-  <link href="assets/css/media.css" rel="stylesheet">
+  <link href="css/media.css" rel="stylesheet">
 
 </head>
 
@@ -39,7 +39,7 @@
     <nav class="navbar navbar-expand-lg  fixed-top" id="mainNav">
       <div class="container">
         <a class="navbar-brand js-scroll-trigger wow bounceInLeft" href="#page-top">
-            <img src="assets/images/logo.png" class="img-fluid logo" alt="Logo">
+            <img src="images/logo.png" class="img-fluid logo" alt="Logo">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <i class="fa fa-th"></i>
@@ -88,7 +88,7 @@
     <div class="container">
       <div class="row">
         <div class="coll-md-12 col-lg-12 text-center wow rotateInDownLeft">
-          <img src="assets/images/icon.png" class="img-fluid icon" alt="icon">
+          <img src="images/icon.png" class="img-fluid icon" alt="icon">
         </div>
       </div>
       <div class="row">
@@ -114,7 +114,7 @@
         <div class="col-md-6 col-lg-6 properties">
           <div class="row">
             <div class="col-12 col-sm-5 col-md-5 col-lg-5 text-center align-self-center wow slideInRight">
-              <img src="assets/images/properties.png" class="img-fluid ci" alt="img">
+              <img src="images/properties.png" class="img-fluid ci" alt="img">
             </div>
             <div class="col-12 col-sm-7 col-md-7 col-lg-7 wow slideInDown">
               <h3>Find Properties</h3>
@@ -127,7 +127,7 @@
         <div class="col-md-6 col-lg-6 buyers">
           <div class="row">
             <div class="col-sm-5 col-md-5 col-lg-5 text-center align-self-center wow slideInLeft">
-              <img src="assets/images/buyer.png" class="img-fluid ci" alt="img">
+              <img src="images/buyer.png" class="img-fluid ci" alt="img">
             </div>
             <div class="col-sm-7 col-md-7 col-lg-7 wow slideInDown">
               <h3>Find Buyers</h3>
@@ -160,7 +160,7 @@
         <div class="card-deck">
           <div class="card">
             <div class="img-box">
-              <img class="card-img-top" src="assets/images/project1.png" alt="Card image cap">
+              <img class="card-img-top" src="images/project1.png" alt="Card image cap">
               <button type="button" class="btn btn-primary btn-card">From GDP 3600</button>
             </div>
             <div class="card-body">
@@ -174,7 +174,7 @@
           </div>
           <div class="card">
             <div class="img-box">
-              <img class="card-img-top" src="assets/images/project2.png" alt="Card image cap">
+              <img class="card-img-top" src="images/project2.png" alt="Card image cap">
               <button type="button" class="btn btn-primary btn-card">From GDP 3600</button>
             </div>
             <div class="card-body">
@@ -188,7 +188,7 @@
           </div>
           <div class="card">
             <div class="img-box">
-              <img class="card-img-top" src="assets/images/project3.png" alt="Card image cap">
+              <img class="card-img-top" src="images/project3.png" alt="Card image cap">
               <button type="button" class="btn btn-primary btn-card">From GDP 3600</button>
             </div>
             <div class="card-body">
@@ -211,7 +211,7 @@
     <div class="container">
       <div class="row">
             <div class="col-12 col-sm-12 col-md-12 col-lg-12 text-center">
-              <img src="assets/images/client.png" class="img-fluid" alt="img">
+              <img src="images/client.png" class="img-fluid" alt="img">
             </div>
       </div>
     </div>
@@ -241,12 +241,6 @@
   <!-- Custom JavaScript for this theme -->
   <script type="text/javascript" src="assets/js/scrolling-nav.js"></script>
 
-  <!-- Wow/Animate Js -->
-  <script type="text/javascript" src="assets/vendor/wow/js/wow.min.js"></script>
-  <script>
-    new WOW().init();
-  </script>
-
-</body>
+ </body>
 
 </html>
