--- a/index.html
+++ b/index.html
@@ -15,9 +15,6 @@
   <!-- Font Awesome -->
   <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet">
 
-  <!-- WOW/Animate CSS --->
-  <link href="vendor/wow/css/animate.css" rel="stylesheet">
-
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
@@ -38,14 +35,14 @@
   <header>
     <nav class="navbar navbar-expand-lg  fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger wow bounceInLeft" href="#page-top">
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">
             <img src="images/logo.png" class="img-fluid logo" alt="Logo">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <i class="fa fa-th"></i>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto wow bounceInRight">
+          <ul class="navbar-nav ml-auto">
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#home">Home</a>
             </li>
@@ -87,18 +84,18 @@
   <section id="work">
     <div class="container">
       <div class="row">
-        <div class="coll-md-12 col-lg-12 text-center wow rotateInDownLeft">
+        <div class="coll-md-12 col-lg-12 text-center">
           <img src="images/icon.png" class="img-fluid icon" alt="icon">
         </div>
       </div>
       <div class="row">
-        <div class="col-12 col-sm-12 col-md-10 col-lg-6 offset-md-1 offset-lg-3 title-box text-center wow slideInLeft">
+        <div class="col-12 col-sm-12 col-md-10 col-lg-6 offset-md-1 offset-lg-3 title-box text-center">
           <h2>Our work is the presentation
             of our capabilities.</h2>
         </div>
       </div>
       <div class="row">
-        <div class="co1-12 col-sm-12 col-md-12 col-lg-12 content-box text-center wow slideInRight">
+        <div class="co1-12 col-sm-12 col-md-12 col-lg-12 content-box text-center">
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
           <p>Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
         </div>
@@ -113,10 +110,10 @@
       <div class="row">
         <div class="col-md-6 col-lg-6 properties">
           <div class="row">
-            <div class="col-12 col-sm-5 col-md-5 col-lg-5 text-center align-self-center wow slideInRight">
+            <div class="col-12 col-sm-5 col-md-5 col-lg-5 text-center align-self-center">
               <img src="images/properties.png" class="img-fluid ci" alt="img">
             </div>
-            <div class="col-12 col-sm-7 col-md-7 col-lg-7 wow slideInDown">
+            <div class="col-12 col-sm-7 col-md-7 col-lg-7">
               <h3>Find Properties</h3>
               <p>Sign up to browse the portfolio.
                 Your journey to becoming a real estate baron starts here.</p>
@@ -126,10 +123,10 @@
         </div>
         <div class="col-md-6 col-lg-6 buyers">
           <div class="row">
-            <div class="col-sm-5 col-md-5 col-lg-5 text-center align-self-center wow slideInLeft">
+            <div class="col-sm-5 col-md-5 col-lg-5 text-center align-self-center">
               <img src="images/buyer.png" class="img-fluid ci" alt="img">
             </div>
-            <div class="col-sm-7 col-md-7 col-lg-7 wow slideInDown">
+            <div class="col-sm-7 col-md-7 col-lg-7">
               <h3>Find Buyers</h3>
               <p>Sign up to browse the portfolio.
                 Your journey to becoming a real estate baron starts here.</p>
@@ -146,7 +143,7 @@
   <section id="blog">
     <div class="container">
       <div class="row">
-          <div class="co1-12 col-sm-8 col-md-8 col-lg-8 wow fadeInUp">
+          <div class="co1-12 col-sm-8 col-md-8 col-lg-8">
             <h2>Featured Projects</h2>
             <p>Brief details of new and popular projects. To view full listings, you will be required to
               sign up and become a member.
