--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Exam Two</title>
+  <title>Exam-no-two</title>
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat|Nunito|Open+Sans:300,400,600&display=swap" rel="stylesheet">
