--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <nav class="navbar navbar-expand-lg  fixed-top" id="mainNav">
       <div class="container">
         <a class="navbar-brand js-scroll-trigger" href="#page-top">
-            <img src="images/logo.png" class="img-fluid logo" alt="Logo">
+            <img src="img/logo.png" class="img-fluid logo" alt="Logo">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <i class="fa fa-th"></i>
@@ -85,7 +85,7 @@
     <div class="container">
       <div class="row">
         <div class="coll-md-12 col-lg-12 text-center">
-          <img src="images/icon.png" class="img-fluid icon" alt="icon">
+          <img src="img/icon.png" class="img-fluid icon" alt="icon">
         </div>
       </div>
       <div class="row">
@@ -111,7 +111,7 @@
         <div class="col-md-6 col-lg-6 properties">
           <div class="row">
             <div class="col-12 col-sm-5 col-md-5 col-lg-5 text-center align-self-center">
-              <img src="images/properties.png" class="img-fluid ci" alt="img">
+              <img src="img/properties.png" class="img-fluid ci" alt="img">
             </div>
             <div class="col-12 col-sm-7 col-md-7 col-lg-7">
               <h3>Find Properties</h3>
@@ -124,7 +124,7 @@
         <div class="col-md-6 col-lg-6 buyers">
           <div class="row">
             <div class="col-sm-5 col-md-5 col-lg-5 text-center align-self-center">
-              <img src="images/buyer.png" class="img-fluid ci" alt="img">
+              <img src="img/buyer.png" class="img-fluid ci" alt="img">
             </div>
             <div class="col-sm-7 col-md-7 col-lg-7">
               <h3>Find Buyers</h3>
@@ -157,7 +157,7 @@
         <div class="card-deck">
           <div class="card">
             <div class="img-box">
-              <img class="card-img-top" src="images/project1.png" alt="Card image cap">
+              <img class="card-img-top" src="img/project1.png" alt="Card image cap">
               <button type="button" class="btn btn-primary btn-card">From GDP 3600</button>
             </div>
             <div class="card-body">
@@ -171,7 +171,7 @@
           </div>
           <div class="card">
             <div class="img-box">
-              <img class="card-img-top" src="images/project2.png" alt="Card image cap">
+              <img class="card-img-top" src="img/project2.png" alt="Card image cap">
               <button type="button" class="btn btn-primary btn-card">From GDP 3600</button>
             </div>
             <div class="card-body">
@@ -185,7 +185,7 @@
           </div>
           <div class="card">
             <div class="img-box">
-              <img class="card-img-top" src="images/project3.png" alt="Card image cap">
+              <img class="card-img-top" src="img/project3.png" alt="Card image cap">
               <button type="button" class="btn btn-primary btn-card">From GDP 3600</button>
             </div>
             <div class="card-body">
@@ -208,7 +208,7 @@
     <div class="container">
       <div class="row">
             <div class="col-12 col-sm-12 col-md-12 col-lg-12 text-center">
-              <img src="images/client.png" class="img-fluid" alt="img">
+              <img src="img/client.png" class="img-fluid" alt="img">
             </div>
       </div>
     </div>
